src/test/ui/rfc-2632-const-trait-impl/const_closures/gate.rs
fn main() {
    (const || {})();
    //~^ ERROR: const closures are experimental
}
